# HilbertCurve

./: .gitignore  .travis.yml  ChangeLog.md  HilbertCurve.cabal  LICENSE  README.md  package.yaml
src/: HilbertCurve.hs
test/: HilbertCurveSpec.hs
