name:           HilbertCurve
version:        0.1.0.0
description:    A Hilbert curve implementation in Haskell
homepage:       https://github.com/FX-HAO/HilbertCurve#readme
bug-reports:    https://github.com/FX-HAO/HilbertCurve/issues
author:         Fuxin Hao
maintainer:     haofxpro@gmail.com
copyright:      2018 Fuxin Hao
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/FX-HAO/HilbertCurve

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  exposed-modules:
      HilbertCurve
  other-modules:
      Paths_HilbertCurve
  default-language: Haskell2010

test-suite HilbertCurve-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HilbertCurve
    , base >=4.7 && <5
    , hspec
  other-modules:
      HilbertCurveSpec
      Paths_HilbertCurve
  default-language: Haskell2010
